@@ -7,6 +7,9 @@
                                   Changelog
 
 Daniel (3 March 2004)
+- David Byron's work on making libcurl only require winsock 1.1 on Windows
+  machines.
+
 - More variable cleanups based on compiler warnings generated by Tor Arntsen's
   autobuilds with MIPSPro.
 
